Fixes word wrapping issues

--- a/app/assets/stylesheets/themes/flat/components/_comments.scss
+++ b/app/assets/stylesheets/themes/flat/components/_comments.scss
@@ -58,6 +58,11 @@
     width: 100%;
     position: relative;
 
+    .comment-body {
+      word-break: break-word;
+      word-wrap: break-word;
+    }
+
     h1 {
       font-size: 1em;
       margin-bottom: .5em;
